# MCKRL

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/workflows/: build.yml  release.yml
constant/footprints/cherry_mx.pretty/: Cherry_MX1A_19.05mm_ISO.kicad_mod  Cherry_MX1A_19.05mm_ISO_flipped-stab.kicad_mod
definitions/footprints/cherry_mx.pretty/: stabilised.yaml
docs/: alps_skxx.md  cherry_mx.md
src/: generate_from_yaml.py
src/definitions/footprints/alps_skxx.pretty/: stabilised-mx.yaml  standard.yaml
src/definitions/footprints/cherry_mx.pretty/: stabilisers-only.yaml  standard.yaml  vertical-stabilised.yaml
src/generators/footprints/keyswitch/: common.py  conversion.py  generate.py
src/generators/footprints/keyswitch/models/: __init__.py  alps_keyswitch.py  cherry_keyswitch.py  cherry_stabiliser.py  keyswitch.py  stabiliser.py
src/mckrl/: cli.py  generate_from_yaml.py  model.py
src/mckrl/generators/footprints/keyswitch/: common.py  conversion.py  generate.py  types.py
src/mckrl/generators/footprints/keyswitch/models/: cherry_keyswitch.py  cherry_stabiliser.py
tests/unit/: empty.yaml  test_yaml_validation.py
util/: build-lib.sh
