[project]
name = "MCKRL"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "jsonschema>=4.25.1",
    "kicad-footprint-generator",
    "pydantic>=2.12.0",
    "pyyaml>=6.0.3",
    "ruff>=0.14.0",
]

[tool.uv.sources]
kicad-footprint-generator = { git = "https://gitlab.com/kicad/libraries/kicad-footprint-generator.git" }

