[project]
name = "mckrl"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "jsonschema>=4.25.1",
    "kicad-footprint-generator",
    "pydantic>=2.12.0",
    "pyyaml>=6.0.3",
    "ruff>=0.14.0",
]

[tool.uv.sources]
kicad-footprint-generator = { git = "https://gitlab.com/kicad/libraries/kicad-footprint-generator.git" }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
mckrl = "mckrl.generate_from_yaml:generate_kicad_objects"