[project]
name = "mckrl"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "jsonschema>=4.25.1",
    "kicad-footprint-generator",
    "loguru>=0.7.3",
    "pydantic>=2.12.0",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "ruff>=0.14.0",
    "typer>=0.20.0",
]

[tool.uv.sources]
kicad-footprint-generator = { git = "https://gitlab.com/kicad/libraries/kicad-footprint-generator.git" }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
mckrl = "mckrl.cli:cli"
